@@ -13,7 +13,7 @@ public abstract class Intersectable  {
     public List<Point> findIntersections(Ray ray) {
         var geoList = findGeoIntersections(ray);
         return geoList == null ? null
-                : geoList.stream().map(gp -> gp.point).toList();
+                : geoList.stream().map(gp -> gp.point).collect(Collectors.toList());
     }
 */
 
